[gd_scene load_steps=2 format=2]

[ext_resource path="res://demo/items/AttributesDialog.gd" type="Script" id=2]

[node name="AttributesDialog" type="PopupDialog"]
margin_left = 348.0
margin_top = 42.0
margin_right = 668.0
margin_bottom = 522.0
rect_min_size = Vector2( 320, 480 )
size_flags_horizontal = 4
size_flags_vertical = 4
popup_exclusive = true
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 320, 480 )
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 296.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 24

[node name="BoxTitle" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 272.0
margin_bottom = 14.0
text = "Item: Attributes"

[node name="AttributesBox" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 272.0
margin_bottom = 388.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/AttributesBox"]
margin_left = 8.0
margin_right = 264.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AttributeList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/AttributesBox/ScrollContainer"]
unique_name_in_owner = true
margin_right = 256.0
margin_bottom = 350.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="EditButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 368.0
margin_right = 272.0
margin_bottom = 388.0
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/EditButtons"]
unique_name_in_owner = true
margin_right = 124.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "add"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/EditButtons"]
unique_name_in_owner = true
margin_left = 148.0
margin_right = 272.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "save"

[node name="ViewButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 412.0
margin_right = 272.0
margin_bottom = 432.0
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="spacer" type="Label" parent="MarginContainer/VBoxContainer/ViewButtons"]
margin_top = 3.0
margin_right = 124.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/ViewButtons"]
unique_name_in_owner = true
margin_left = 148.0
margin_right = 272.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "close"
